Added all scenarios

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h2 {
 .choice_button {
     background-color: black;
     font-family: 'Ubuntu', serif;
+    font-size: x-large;
     text-align: center;
     color: white;
     width: 30vw;
